Version 3.0:

	Healpix-based hashing instead of a ra/dec grid. Works now accurately
	also on the poles and near ra=0. 
	More accurate great-arc distance formula.
	
	Updated fake catalogue script (3.1)

	Added healpy to install dependencies (3.2)

	Use faster ra/dec grid when safe in off-pole/off-ra-origin fields (3.3)

	Replaced progressbar with progressbar-latest (3.4)

	fixed warnings for very recent numpy versions (3.5)

Version 2.0:
	
	Added correction for associations additional to association with the 
	primary catalogue source. 

	Using magnitude histogram ratios rather than fractions (1.9)

	Corrected magnitude prior normalisation for the case of NaNs or missing source (1.7)
	
Version 1.0: 
	
	Column name changes:
		bf -> dist_bayesfactor
		bfpost -> dist_post
		post -> p_single
		post_group_no_match -> p_any (Note: p_any = 1 - post_group_no_match)
		post_group_this_match -> p_i

	match_flag was modified to use p_i instead of post.
