@@ -13,6 +13,8 @@ Version 3.0:
 	Replaced progressbar with progressbar-latest (3.4)
 
 	fixed warnings for very recent numpy versions (3.5)
+	
+	updated manual and made nway-write-header.py more user-friendly (3.6)
 
 Version 2.0:
 	
